# Finance-ETL-Pipeline-Monthly-Close-Dataset

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
data/bi/2025-12/: data_dictionary.txt  dq_exceptions.csv  dq_summary.csv  fact_transactions.csv  kpi_monthly.csv
data/bi_star/2025-12/: POWERBI_MODEL_NOTES.txt  dim_account.csv  dim_date.csv  dim_entity.csv  dim_month.csv  fact_gl.csv  fact_kpi_monthly.csv
data/reference/: chart_of_accounts.csv
reports/2025-12/: dashboard.html
scripts/: build_dashboard.py  export_bi_datasets.py  export_powerbi_star_schema.py  generate_synthetic_data.py
src/finance_etl/: cli.py  config.py  io_utils.py  pipeline.py  quality.py  sample_data.py  transform.py
tests/: test_cli.py  test_pipeline_smoke.py
