[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "finance-etl-pipeline"
version = "0.1.0"
description = "Monthly Finance ETL + Data Quality checks + curated dashboard dataset"
requires-python = ">=3.11"
dependencies = [
  "pandas>=2.2",
  "pyarrow>=16.0",
  "pandera>=0.20",
  "typer>=0.12",
  "rich>=13.0",
  "pydantic>=2.6",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
]

[project.scripts]
finance-etl = "finance_etl.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
